Fix alignment of input

--- a/src/clr-addons/daterangepicker/directives/daterangepicker-container/daterangepicker-container.component.scss
+++ b/src/clr-addons/daterangepicker/directives/daterangepicker-container/daterangepicker-container.component.scss
@@ -4,7 +4,7 @@
 
   ::ng-deep > .clr-input {
     width: 100%;
-    padding: 0;
+    padding: 0 0.3rem;
   }
 }
 
